Add rooms service

--- a/spring-petclinic-api-gateway/src/main/resources/static/scripts/fragments/nav.html
+++ b/spring-petclinic-api-gateway/src/main/resources/static/scripts/fragments/nav.html
@@ -33,6 +33,12 @@
                         <span>Veterinarians</span>
                     </a>
                 </li>
+                <li>
+                    <a class="nav-link" ui-sref-active="active" ui-sref="rooms" title="rooms">
+                        <span class="fa fa-th-list"></span>
+                        <span>Rooms</span>
+                    </a>
+                </li>
             </ul>
         </div>
 </nav>
